--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -12,17 +12,48 @@
   bottom: 0;
 }
 
-.homepage {
-  padding-top:60px ;
-  padding-bottom: 60px;
-}
-
-img {
-  max-width: 100%;
-  height: auto;
-}
-
-.background-image {
+.banner {
+  position: relative; /* Esto es necesario para el posicionamiento absoluto de los hijos */
+  background-image: url('../assets/DALL·E 2024-01-21 13.08.39 - A graphic design style image featuring a variety of workers in different environments. There are warehouse workers wearing gray overalls or shirts wit.png');
   background-size: cover;
   background-position: center;
+  background-attachment: fixed;
+  height: 100vh; 
+  width: 100vw;
+  display: flex;
+  flex-direction: column; /* Organiza los hijos en una columna */
+  align-items: center; /* Centra los hijos horizontalmente */
+  justify-content: center; /* Centra los hijos verticalmente */
 }
+
+.heading-primary {
+  color: white; /* Asegúrate de que el texto sea legible sobre el fondo */
+  margin: 0 0 20px 0; /* Añade un margen inferior para separar del h2 */
+  z-index: 2;
+}
+
+.heading-secondary {
+  color: white; /* Asegúrate de que el texto sea legible sobre el fondo */
+  margin: 0 0 20px 0; /* Añade un margen inferior para separar del párrafo */
+  z-index: 2;
+}
+
+p {
+  color: white; /* Asegúrate de que el texto sea legible sobre el fondo */
+  width: 80%; /* O un ancho específico si prefieres */
+  text-align: center; /* Centra el texto si es necesario */
+  z-index: 2;
+}
+
+/* Estilo opcional para el degradado sobre la imagen de fondo */
+.banner:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: linear-gradient(rgba(80, 200, 120, 0.5), rgba(0, 49, 83, 0.5));
+  z-index: 1;
+}
+
