--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -9,7 +9,10 @@
 }
 
 .footer{
-  bottom: 0;
+  position: relative;
+  margin-top: 50px;
+  height: 100px;
+  padding-top: 100px;
 }
 
 .container {
@@ -23,7 +26,7 @@
   min-height: 300px; /* Altura mínima */
   max-height: 400px;
   overflow: auto; /* Oculta el contenido que exceda la altura máxima */
-  margin: 3px; 
+  /* margin: 3px;  */
   opacity: 90%;
 }
 .card-title{
@@ -40,7 +43,7 @@
   background-color: white;
   min-height: 600px; /* Altura mínima */
   overflow: auto; /* Oculta el contenido que exceda la altura máxima */
-  margin: 3px; 
+  /* margin: 3px;  */
   opacity: 90%;
   padding: 10px;
   border-radius: 3%;
